Acceptor are now persistent